--- a/src/components/SideBarMenu.astro
+++ b/src/components/SideBarMenu.astro
@@ -5,10 +5,10 @@ const activeClass = "bg-base-300"; // For primary color replace with `active` cl
 
 <ul class="menu grow shrink menu-md overflow-y-auto">
     <li><a class="py-3 text-base" id="home" href="/cv">Home</a></li>
-    <li><a class="py-3 text-base" id="projects" href="cv//projects">Projects</a></li>
-    <li><a class="py-3 text-base" id="services" href="cv//services">Services</a></li>
-    <li><a class="py-3 text-base" id="store" href="cv//store">Store</a></li>
-    <li><a class="py-3 text-base" id="blog" href="cv/blog/">Blog</a></li>
+    <li><a class="py-3 text-base" id="projects" href="/projects">Projects</a></li>
+    <li><a class="py-3 text-base" id="services" href="/services">Services</a></li>
+    <li><a class="py-3 text-base" id="store" href="/store">Store</a></li>
+    <li><a class="py-3 text-base" id="blog" href="/blog/">Blog</a></li>
     <li><a class="py-3 text-base" id="cv" href="/cv/cv">CV</a></li>
     <li>
         <a
