modifiche al cv

--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -9,10 +9,15 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
   </div>
 
   <div class="mb-10 text-justify">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-    aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-    cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    Sono un ingegnere informatico, laureato con capacità tecniche e una solida
+    comprensione dei linguaggi di programmazione. Ho sviluppato una particolare
+    competenza nell’ambito dell’Instance Segmentation durante la mia tesi, che
+    mi ha permesso di approfondire le mie competenze in questo campo. Ho una
+    forte capacità di apprendimento e adattamento, con un interesse particolare
+    per il mantenimento all’avanguardia delle nuove tecnologie. La mia passione
+    per lo sport mi ha permesso di sviluppare un forte spirito di squadra, una
+    mentalità competitiva e una grande resistenza, qualità che ritengo utili
+    anche nel campo dell’ingegneria informatica.
   </div>
 
   <div class="mb-5">
@@ -39,19 +44,38 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
       title="Job Title at Project or Company Name"
       subtitle="From [Start Date] to [End Date] at [Company], [City], [Country]"
     >
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.
+      Nel corso degli ultimi due anni, ho lavorato come ingegnere del software
+      backend presso la Soes S.p.a., specializzata nella
+      programmazione Java. Le mie responsabilità includono lo sviluppo e la
+      manutenzione del backend delle applicazioni, garantendo prestazioni
+      ottimali e un’esperienza utente senza interruzioni. Ho anche acquisito
+      esperienza nel lato sistemistico, lavorando con Docker per garantire la
+      distribuzione efficiente e la scalabilità delle nostre applicazioni.
+      Questa esperienza mi ha permesso di sviluppare una solida comprensione dei
+      principi di ingegneria del software e di affinare le mie competenze
+      tecniche.
     </TimeLineElement>
     <TimeLineElement
       title="Job Title at Project or Company Name"
       subtitle="From [Start Date] to [End Date] at [Company], [City], [Country]"
     >
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+      veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+      commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+      velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+      cupidatat non proident.
     </TimeLineElement>
     <TimeLineElement
       title="Job Title at Project or Company Name"
       subtitle="From [Start Date] to [End Date] at [Company], [City], [Country]"
     >
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+      veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+      commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+      velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+      cupidatat non proident.
     </TimeLineElement>
   </div>
 
