--- a/src/components/SideBarFooter.astro
+++ b/src/components/SideBarFooter.astro
@@ -24,7 +24,7 @@
             ></path></svg
         >
     </a>
-    <a href="https://github.com/manuelernestog" target="_blank" class="mx-3" aria-label="Github" title="Github">
+    <a href="https://github.com/mancio8" target="_blank" class="mx-3" aria-label="Github" title="Github">
         <svg
             xmlns="http://www.w3.org/2000/svg"
             width="24"
