--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -41,8 +41,8 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 
   <div class="time-line-container mb-10">
     <TimeLineElement
-      title="Job Title at Project or Company Name"
-      subtitle="From [Start Date] to [End Date] at [Company], [City], [Country]"
+      title="Backend Developer"
+      subtitle="Dal 01/10/2022 presso [Soes S.p.a.], [Telese Terme], [Italia]"
     >
       Nel corso degli ultimi due anni, ho lavorato come ingegnere del software
       backend presso la Soes S.p.a., specializzata nella
