--- a/src/components/SideBarMenu.astro
+++ b/src/components/SideBarMenu.astro
@@ -7,13 +7,12 @@ const activeClass = "bg-base-300"; // For primary color replace with `active` cl
     <li><a class="py-3 text-base" id="home" href="/cv">Home</a></li>
     <li><a class="py-3 text-base" id="projects" href="/cv/projects">Projects</a></li>
     <li><a class="py-3 text-base" id="services" href="/cv/services">Services</a></li>
-    <li><a class="py-3 text-base" id="store" href="/cv/store">Store</a></li>
     <li><a class="py-3 text-base" id="blog" href="/cv/blog/">Blog</a></li>
     <li><a class="py-3 text-base" id="cv" href="/cv/cv">CV</a></li>
     <li>
         <a
             class="py-3 text-base"
-            href="mailto:contact.manuelernestog@gmail.com"
+            href="mailto:contact.mancinelliasr8g@gmail.com"
             target="_blank"
             referrerpolicy="no-referrer-when-downgrade">Contact</a
         >
