--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -45,18 +45,15 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
       subtitle="Dal 01/10/2022 presso [Soes S.p.a.], [Telese Terme], [Italia]"
     >
       Nel corso degli ultimi due anni, ho lavorato come ingegnere del software
-      backend presso la Soes S.p.a., specializzata nella
-      programmazione Java. Le mie responsabilità includono lo sviluppo e la
-      manutenzione del backend delle applicazioni, garantendo prestazioni
-      ottimali e un’esperienza utente senza interruzioni. Ho anche acquisito
-      esperienza nel lato sistemistico, lavorando con Docker per garantire la
-      distribuzione efficiente e la scalabilità delle nostre applicazioni.
-      Questa esperienza mi ha permesso di sviluppare una solida comprensione dei
-      principi di ingegneria del software e di affinare le mie competenze
-      tecniche.
+      backend presso la Soes S.p.a., specializzata nella programmazione Java. Le
+      mie responsabilità includono lo sviluppo e la manutenzione del backend
+      delle applicazioni, garantendo prestazioni ottimali e un’esperienza utente
+      senza interruzioni. Ho anche acquisito esperienza nel lato sistemistico,
+      lavorando con Docker per garantire la distribuzione efficiente e la
+      scalabilità delle nostre applicazioni. Questa esperienza mi ha permesso di
+      sviluppare una solida comprensione dei principi di ingegneria del software
+      e di affinare le mie competenze tecniche.
     </TimeLineElement>
-    
-   
   </div>
 
   <div class="mb-5">
@@ -75,6 +72,33 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
   <div class="mb-5">
     <div class="text-3xl w-full font-bold">Skills</div>
   </div>
+  <div class="text-xl w-full font-semibold">
+    Languages • Libraries • Frameworks • Bundlers
+  </div>
+  <ul class="list-disc md:columns-5 columns-2 mx-6">
+    <li>Java</li>
+    <li>Python</li>
+    <li>Django</li>
+    <li>Flutter</li>
+    <li>Mips</li>
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>Bootstrap</li>
+    <li>Spring</li>
+    <li>Quarkus</li>
+    <li>JavaScript</li>
+    <li>TypeScript</li>
+    <li>Angular</li>
+    <li>Astro</li>
+    <li>Markdown</li>
+    <li>PostgreSQL</li>
+    <li>JSON</li>
+    <li>Docker</li>
+    
+  </ul>
+  <div class="text-xl w-full font-semibold">
+    Addittional
+  </div>
 
   <ul class="list-disc md:columns-5 columns-2 mx-6">
     <li>Gestione di progetti software</li>
@@ -83,6 +107,5 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
     <li>Leadership e gestione del team</li>
     <li>Competenze interpersonali</li>
     <li>Test del software</li>
-    
   </ul>
 </BaseLayout>
