--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -75,37 +75,44 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
   <div class="text-xl w-full font-semibold">
     Languages • Libraries • Frameworks • Bundlers
   </div>
-  <ul class="list-disc md:columns-5 columns-2 mx-6">
-    <li>Java</li>
-    <li>Python</li>
-    <li>Django</li>
-    <li>Flutter</li>
-    <li>Mips</li>
-    <li>HTML</li>
-    <li>CSS</li>
-    <li>Bootstrap</li>
-    <li>Spring</li>
-    <li>Quarkus</li>
-    <li>JavaScript</li>
-    <li>TypeScript</li>
-    <li>Angular</li>
-    <li>Astro</li>
-    <li>Markdown</li>
-    <li>PostgreSQL</li>
-    <li>JSON</li>
-    <li>Docker</li>
-    
-  </ul>
+  <div class="mb-6">
+    <ul class="list-disc md:columns-5 columns-2 mx-6">
+      <li>Java</li>
+      <li>Python</li>
+      <li>Django</li>
+      <li>Flutter</li>
+      <li>Mips</li>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>Bootstrap</li>
+      <li>Spring</li>
+      <li>Quarkus</li>
+      <li>JavaScript</li>
+      <li>TypeScript</li>
+      <li>Angular</li>
+      <li>Astro</li>
+      <li>Markdown</li>
+      <li>PostgreSQL</li>
+      <li>JSON</li>
+      <li>Docker</li>
+      
+    </ul>
+  </div>
+  
   <div class="text-xl w-full font-semibold">
     Addittional
   </div>
 
-  <ul class="list-disc md:columns-5 columns-2 mx-6">
-    <li>Gestione di progetti software</li>
-    <li>Machine Learning</li>
-    <li>Data Science</li>
-    <li>Leadership e gestione del team</li>
-    <li>Competenze interpersonali</li>
-    <li>Test del software</li>
-  </ul>
+  <div class="mb-6">
+    <ul class="list-disc md:columns-5 columns-2 mx-6">
+        <li>Gestione di progetti software</li>
+        <li>Machine Learning</li>
+        <li>Data Science</li>
+        <li>Leadership e gestione del team</li>
+        <li>Competenze interpersonali</li>
+        <li>Test del software</li>
+      </ul>
+  </div>
+
+  
 </BaseLayout>
