--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -72,9 +72,12 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
   <div class="mb-5">
     <div class="text-3xl w-full font-bold">Skills</div>
   </div>
-  <div class="text-xl w-full font-semibold">
-    Languages • Libraries • Frameworks • Bundlers
+  <div class="mb-3">
+    <div class="text-xl w-full font-semibold">
+      Languages • Libraries • Frameworks • Bundlers
+    </div>
   </div>
+  
   <div class="mb-6">
     <ul class="list-disc md:columns-5 columns-2 mx-6">
       <li>Java</li>
@@ -99,8 +102,11 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
     </ul>
   </div>
   
-  <div class="text-xl w-full font-semibold">
-    Addittional
+  
+  <div class="mb-3">
+    <div class="text-xl w-full font-semibold">
+      Addittional
+    </div>
   </div>
 
   <div class="mb-6">
