--- a/src/pages/libri.astro
+++ b/src/pages/libri.astro
@@ -7,34 +7,18 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 
 
   <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Skills</div>
+    <div class="text-3xl w-full font-bold">Libri</div>
   </div>
   <div class="mb-3">
     <div class="text-xl w-full font-semibold">
-      Libri
+      Manga
     </div>
   </div>
   
   <div class="mb-6">
     <ul class="list-disc md:columns-5 columns-2 mx-6">
-      <li>Blue Lock 7</li>
-      <li>Python</li>
-      <li>Django</li>
-      <li>Flutter</li>
-      <li>Mips</li>
-      <li>HTML</li>
-      <li>CSS</li>
-      <li>Bootstrap</li>
-      <li>Spring</li>
-      <li>Quarkus</li>
-      <li>JavaScript</li>
-      <li>TypeScript</li>
-      <li>Angular</li>
-      <li>Astro</li>
-      <li>Markdown</li>
-      <li>PostgreSQL</li>
-      <li>JSON</li>
-      <li>Docker</li>
+      <li>Blue Lock 1-7</li>
+      
       
     </ul>
   </div>
@@ -48,12 +32,12 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 
   <div class="mb-6">
     <ul class="list-disc md:columns-5 columns-2 mx-6">
-        <li>Gestione di progetti software</li>
-        <li>Machine Learning</li>
-        <li>Data Science</li>
-        <li>Leadership e gestione del team</li>
-        <li>Competenze interpersonali</li>
-        <li>Test del software</li>
+        <li>La profezia dell'armadillo</li>
+        <li>Dimentica il mio nome</li>
+        <li>Macerie Prime</li>
+        <li>Macerie Prime - 6 mesi dopo</li>
+        <li>Kobane Calling</li>
+        
       </ul>
   </div>
 
