add education in cv

--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -26,12 +26,12 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 
   <div class="time-line-container grid gap-4 mb-10">
     <TimeLineElement
-      title="Title Name"
-      subtitle="[start year] to [end year] at [Study Center Name], [City], [Country]"
+      title="Diploma di Ragioneria"
+      
     />
     <TimeLineElement
-      title="Title Name"
-      subtitle="[start year] to [end year] at [Study Center Name], [City], [Country]"
+      title="Laurea in Ingegneria informatica"
+      subtitle="Università degli studi del Sannio, Benevento, Italia"
     />
   </div>
 
@@ -42,7 +42,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
   <div class="time-line-container mb-10">
     <TimeLineElement
       title="Backend Developer"
-      subtitle="Dal 01/10/2022 presso [Soes S.p.a.], [Telese Terme], [Italia]"
+      subtitle="Dal 01/10/2022 - Presente, presso Soes S.p.a., Telese Terme, Italia"
     >
       Nel corso degli ultimi due anni, ho lavorato come ingegnere del software
       backend presso la Soes S.p.a., specializzata nella programmazione Java. Le
