--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -22,6 +22,7 @@ const { title, description, image = '/social_img.png' } = Astro.props;
 <title>{title}</title>
 <meta name="title" content={title} />
 <meta name="description" content={description} />
+<meta name="google-site-verification" content="JVDjY75aEuannhVuaKBHV8mbJc4I4D4TkGc6EC5JSBQ" />
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website" />
