--- a/src/components/TeamSection2.astro
+++ b/src/components/TeamSection2.astro
@@ -28,7 +28,7 @@ import TeamSection2List from "../components/TeamSection2List.astro";
                        
                         <TeamSection2List
                         title={title}
-                        img="/post_img.webp"
+                        img="/armadillo.jpeg"
                         desc="Calendario calcio"
                         url="#"
                         tags="Allegri Allegri"
