--- a/src/pages/libri.astro
+++ b/src/pages/libri.astro
@@ -140,7 +140,7 @@ import TeamSection2 from "../components/TeamSection2.astro";
 
   <TeamSection2
   title="Allegri Allegri"
-  img="/post_img.webp"
+  img="/amdadillo.jpeg"
   desc="Calendario calcio"
   url="#"
   tags="Allegri Allegri"
