--- a/src/components/TeamSection2List.astro
+++ b/src/components/TeamSection2List.astro
@@ -6,7 +6,18 @@ import { Image } from "@astrojs/image/components";
 
 <div class="flex flex-col mr-5 text-center mb-11 lg:mr-16">
     <div class="inline-block mb-4 relative shrink-0 rounded-[.95rem]">
-      <img class="inline-block shrink-0 rounded-[.95rem] w-[150px] h-[150px]" src="https://raw.githubusercontent.com/Loopple/loopple-public-assets/main/riva-dashboard-tailwind/img/avatars/avatar11.jpg" alt="avarat image">
+        {
+            img && (
+              <Image
+                src={img}
+                aspectRatio="12:16"
+                width={150}
+                format="jpeg"
+                alt={title}
+                class="max-w-full md:max-w-[13rem] rounded-lg"
+              />
+            )
+          }
     </div>
     <div class="text-center">
       <a href="javascript:void(0)" class="text-dark font-semibold hover:text-primary text-[1.25rem] transition-colors duration-200 ease-in-out">{title}</a>
