add new project

--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -6,7 +6,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 
 <BaseLayout title="Resume" sideBarActiveItemID="cv">
   <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Profile</div>
+    <div class="text-3xl w-full font-bold">Profilo</div>
   </div>
 
   <div class="mb-10 text-justify">
@@ -22,7 +22,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
   </div>
 
   <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Education</div>
+    <div class="text-3xl w-full font-bold">Educazione</div>
   </div>
 
   <div class="time-line-container grid gap-4 mb-10">
@@ -37,7 +37,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
   </div>
 
   <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Experience</div>
+    <div class="text-3xl w-full font-bold">Esperienza</div>
   </div>
 
   <div class="time-line-container mb-10">
@@ -58,15 +58,24 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
   </div>
 
   <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Certifications</div>
+    <div class="text-3xl w-full font-bold">Certificazioni</div>
   </div>
 
   <ul class="list-disc mx-6 mb-10 grid gap-2">
     <li>
-      <a href="#" target="_blank"> Certification Name (with link)</a>
+      <a href="https://media.licdn.com/dms/image/C4D22AQEIeQXEpMb-qQ/feedshare-shrink_1280/0/1664486095821?e=1710979200&v=beta&t=G0iNnkywxtbH7IbJUC3pI1CSRNG8AZe5yr3t1gksR-A" target="_blank"> DTLab Networking BootCamp 2022</a>
     </li>
     <li>
-      <a href="#" target="_blank"> Certification Name (with link)</a>
+      <a href="https://www.credly.com/badges/49b997f4-3e67-454b-b7d3-ef25211ddf8e/linked_in?t=rd63xk" target="_blank"> DevNet Associate</a>
+    </li>
+    <li>
+      <a href="https://www.freecodecamp.org/certification/fcc5da92dc9-e427-443b-9586-43039d1a46f8/machine-learning-with-python-v7" target="_blank"> Machine Learning with Python</a>
+    </li>
+    <li>
+      <a href="#" > PCAP: Programming Essentials in Python</a>
+    </li>
+    <li>
+      <a href="https://www.freecodecamp.org/certification/fcc5da92dc9-e427-443b-9586-43039d1a46f8/data-analysis-with-python-v7" target="_blank"> Data Analysis with Python</a>
     </li>
   </ul>
 
