--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,39 +3,50 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 import HorizontalCard from "../components/HorizontalCard.astro";
 import { getCollection } from "astro:content";
 
-const posts = (await getCollection("blog")).sort((a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf());
+const posts = (await getCollection("blog")).sort(
+  (a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
+);
 
 const last_posts = posts.slice(0, 3);
 ---
 
 <BaseLayout sideBarActiveItemID="home">
   <div class="pb-12 mt-5">
-    <div class="text-xl py-1">Hey there 👋</div>
-    <div class="text-5xl font-bold">I'm Vincenzo Mancinelli</div>
-    <div class="text-3xl py-3 font-bold">Software Engineer and Entrepreneur</div>
+    <div class="text-xl py-1">Hey 👋</div>
+    <div class="text-5xl font-bold">Sono Vincenzo Mancinelli</div>
+    <div class="text-3xl py-3 font-bold">
+      Ingegnere Informatico
+    </div>
     <div class="py-2">
       <text class="text-lg">
-        This is <b>Astrofy</b> a free and open-source template for your Personal Portfolio Website built with Astro and TailwindCSS.
-        Create in minutes a website with Blog, CV, Project Section, Store and RSS Feed. I hope you find
-        it useful!
+        Sono un appassionato di informatica con una solida formazione e
+        competenze nel campo della programmazione, dell’architettura dei sistemi
+        e dello sviluppo software. Ho una passione per la risoluzione di
+        problemi complessi e l’ottimizzazione delle soluzioni.
       </text>
     </div>
     <div class="mt-8">
-      <a class="btn" href="https://twitter.com/manuelernestog" target="_blank"> Let's connect!</a>
-      <a href="https://github.com/manuelernestog/astrofy" target="_blank" class="btn btn-outline ml-5">
+      <a class="btn" href="https://twitter.com/manuelernestog" target="_blank">
+        Let's connect!</a
+      >
+      <a
+        href="https://github.com/manuelernestog/astrofy"
+        target="_blank"
+        class="btn btn-outline ml-5"
+      >
         Get This template
       </a>
     </div>
   </div>
 
   <div>
-    <div class="text-3xl w-full font-bold mb-2">My last projects {"</>"}</div>
+    <div class="text-3xl w-full font-bold mb-2">I miei ultimi progetti{"</>"}</div>
   </div>
 
   <HorizontalCard
-    title="Demo Project 1"
-    img="/post_img.webp"
-    desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
+    title="Instance Segmentation per l’Identificazione di Oggetti in Tempo Reale nei Contesti Automobilistici: Sfide e Soluzioni"
+    img="/th.jpeg"
+    desc="Lo scopo di questa tesi  è quello di sviluppare un sistema in grado di effetuare l'istance segmentation, ovvero identificare, classificare e tracciare gli ostacoli nella scena stradale, utilizzando un insieme di Dataset generati mediante il simulatore Car Learning To ACT (CARLA) per avere diversi scenari di momenti comuni di guida."
     url="#"
     badge="NEW"
   />
