--- a/src/pages/libri.astro
+++ b/src/pages/libri.astro
@@ -27,6 +27,21 @@ import TeamSection2 from "../components/TeamSection2.astro";
       
     </ul>
   </div>
+
+  <div class="mb-3">
+    <div class="text-xl w-full font-semibold">
+      Graphic Novel
+    </div>
+  </div>
+  
+  <div class="mb-6">
+    <ul class="list-disc md:columns-5 columns-2 mx-6">
+      <li>Troppo facile amarti in vacanza- Keison</li>
+      <li>La terra dei figli - Gipi</li>
+      
+      
+    </ul>
+  </div>
   
   
   <div class="mb-3">
@@ -42,6 +57,10 @@ import TeamSection2 from "../components/TeamSection2.astro";
         <li>Macerie Prime</li>
         <li>Macerie Prime - 6 mesi dopo</li>
         <li>Kobane Calling</li>
+        <li>Dodici</li>
+        <li>L'elenco telefonico degli accolli</li>
+        <li>Un polpo alla gola</li>
+        
         
       </ul>
   </div>
