--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -52,10 +52,10 @@ const last_posts = posts.slice(0, 3);
   />
   <div class="divider my-0"></div>
   <HorizontalCard
-    title="Demo Project 2"
-    img="/post_img.webp"
-    desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
-    url="#"
+    title="Sito Web Dinamico con Django e PostgreSQL per l'Associazione Arci Guardia"
+    img="https://res.cloudinary.com/dqh1pnrdx/image/upload/v1720615023/2024-07-10_14-35_zr5xqc.png"
+    desc=" Il progetto ha coinvolto la creazione di un'interfaccia utente intuitiva e responsiva, consentendo agli utenti di accedere facilmente a informazioni cruciali e di interagire con la piattaforma in modo efficace. Ho gestito l'intero ciclo di sviluppo, dalla progettazione concettuale alla implementazione, assicurando la sicurezza e l'ottimizzazione delle prestazioni del sito."
+    url="http://arciguardia.online/"
   />
   <div class="divider my-0"></div>
   <HorizontalCard
