--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -58,7 +58,7 @@ const last_posts = posts.slice(0, 3);
     url="http://arciguardia.online/"
   />
   <div class="divider my-0"></div>
-  <HorizontalCard
+  <HorizontalCard hidden
     title="Demo Project 3"
     img="/post_img.webp"
     desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
@@ -73,7 +73,7 @@ const last_posts = posts.slice(0, 3);
   {
     last_posts.map((post) => (
       <>
-        <HorizontalCard
+        <HorizontalCard hidden
           title={post.data.title}
           img={post.data.heroImage}
           desc={post.data.description}
