--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -4,7 +4,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 ---
 
 
-<BaseLayout title="Resume" sideBarActiveItemID="cv">
+<BaseLayout title="Curriculum - Vincenzo Mancinelli" sideBarActiveItemID="cv">
   <div class="mb-5">
     <div class="text-3xl w-full font-bold">Profilo</div>
   </div>
