--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,7 +36,7 @@ const last_posts = posts.slice(0, 3);
     title="Instance Segmentation per l’Identificazione di Oggetti in Tempo Reale nei Contesti Automobilistici: Sfide e Soluzioni"
     img="/th.jpeg"
     desc="Lo scopo di questa tesi  è quello di sviluppare un sistema in grado di effetuare l'istance segmentation, ovvero identificare, classificare e tracciare gli ostacoli nella scena stradale, utilizzando un insieme di Dataset generati mediante il simulatore Car Learning To ACT (CARLA) per avere diversi scenari di momenti comuni di guida."
-    url="#"
+    url="/cv/blog/post1"
     badge="NEW"
   />
   <div class="divider my-0"></div>
